# PaperSites

./: LICENSE  README.md  index.html  main.py  pyproject.toml
content/: index.md  site.json
papersites/: __init__.py  builder.py  cli.py  components.py  config.py  navbar.py  parser.py  template.py  typography.py
tests/: test_builder.py  test_components.py  test_navbar.py  test_parser.py  test_typography.py
