[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "papersites"
version = "0.1.0"
description = "A small, opinionated Markdown -> HTML static site generator with a custom component syntax."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Shrey Arora" }]
dependencies = [
    "markdown>=3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
papersites = "papersites.cli:main"

[tool.setuptools.packages.find]
include = ["papersites*"]
